--- a/configuration.yaml
+++ b/configuration.yaml
@@ -75,6 +75,26 @@ sensor:
       - temperature
     update_interval: 
       minutes: 3
+  - platform: flunearyou
+    latitude: !secret latitude_home
+    longitude: !secret longitude_home
+  - platform: waqi
+    token: !secret aq_apikey
+    locations:
+      - boise
+    stations:
+      - st lukes, idaho, usa
+  - platform: pi_hole
+    host: 192.168.0.51
+    monitored_conditions:
+      - ads_blocked_today
+      - dns_queries_today
+  - platform: moon
+    
+
+google:
+  client_id: !secret google_clientid
+  client_secret: !secret google_clientsecret
 
 # Text to speech
 tts:
@@ -92,3 +112,4 @@ panel_iframe:
     title: Configurator
     icon: mdi:wrench
     url: http://hassio.local:3218
+  
